==> goldenstasteworriors/software-and-hardware/need_to_check_in_github/【WHEELTEC】TB6612电机驱动附送资料_V3.1_2023.08.30/1.例程源码/1.STM32F1例程/2.D153B例程/fuben/HAREWER/ADC/adc.c <==
#include "adc.h"
#include "delay.h"
#include "usart.h"

/**************************************************************************
函数功能：ADC1初始化函数
入口参数：无
返回  值：无
**************************************************************************/

void adc1_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;            //定义结构体GPIO_InitStructure
	ADC_InitTypeDef ADC_InitStructure;          //定义结构ADC_InitStructure

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA|RCC_APB2Periph_ADC1, ENABLE);	//开启GPIOA和ADC1时钟

	//PA4 作为模拟通道输入引脚                         
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AIN;		//模拟输入引脚
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	RCC_ADCCLKConfig(RCC_PCLK2_Div6);   //设置ADC分频因子6 72M/6=12,ADC最大时间不能超过14M

	ADC_DeInit(ADC1);  //复位ADC1,将外设 ADC1 的全部寄存器重设为缺省值
	
	ADC_InitStructure.ADC_Mode = ADC_Mode_Independent;	//ADC工作模式:ADC1和ADC2工作在独立模式
	ADC_InitStructure.ADC_ScanConvMode = DISABLE;	//不使用扫描模式
	ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;	//模数转换工作在单次转换模式，不使用连续转换
	ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_None;	//转换由软件触发，不使用外部触发启动
	ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;	//ADC数据右对齐
	ADC_InitStructure.ADC_NbrOfChannel = 1;	//顺序进行规则转换的ADC通道的数目1
	
	ADC_Init(ADC1, &ADC_InitStructure);	//ADC初始化使用adc1
	
	ADC_Cmd(ADC1, ENABLE);	//使能指定的ADC1
	
	ADC_ResetCalibration(ADC1);	//使能复位校准  
	
	while(ADC_GetResetCalibrationStatus(ADC1));	//等待复位校准结束

	
	ADC_StartCalibration(ADC1);	 //开启AD校准
 
	while(ADC_GetCalibrationStatus(ADC1));	 //等待校准结束

}


/**************************************************************************
函数功能：ACD2初始化函数
入口参数：无
返回  值：无
**************************************************************************/

void adc2_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;            //定义结构体GPIO_InitStructure
	ADC_InitTypeDef ADC_InitStructure;          //定义结构ADC_InitStructure

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA|RCC_APB2Periph_ADC2, ENABLE);	//开启GPIOA和ADC2时钟

	//PA5 作为模拟通道输入引脚                         
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AIN;		//模拟输入引脚
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	RCC_ADCCLKConfig(RCC_PCLK2_Div6);   //设置ADC分频因子6 72M/6=12,ADC最大时间不能超过14M

	ADC_DeInit(ADC2);  //复位ADC1,将外设 ADC1 的全部寄存器重设为缺省值
	
	ADC_InitStructure.ADC_Mode = ADC_Mode_Independent;	//ADC工作模式:ADC1和ADC2工作在独立模式
	ADC_InitStructure.ADC_ScanConvMode = DISABLE;	//不使用扫描模式
	ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;	//模数转换工作在单次转换模式，不使用连续转换
	ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_None;	//转换由软件触发，不使用外部触发启动
	ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;	//ADC数据右对齐
	ADC_InitStructure.ADC_NbrOfChannel = 1;	//顺序进行规则转换的ADC通道的数目1
	
	ADC_Init(ADC2, &ADC_InitStructure);	//ADC初始化使用adc1
	
	ADC_Cmd(ADC2, ENABLE);	//使能指定的ADC2
	
	ADC_ResetCalibration(ADC2);	//使能复位校准  
	
	while(ADC_GetResetCalibrationStatus(ADC2));	//等待复位校准结束

	
	ADC_StartCalibration(ADC2);	 //开启AD校准
 
	while(ADC_GetCalibrationStatus(ADC2));	 //等待校准结束

}


/**************************************************************************
函数功能：获得ADC1值
入口参数：ch 通道值 0~3
返回  值：返回最近一次ADC1规则组的转换结果
**************************************************************************/

u16  Get_adc1(u8 ch)
{   
			//设置指定ADC的规则组通道，一个序列，采样时间
	ADC_RegularChannelConfig(ADC1, ch, 1, ADC_SampleTime_239Cycles5 );	//ADC1,ADC通道,采样时间为239.5周期	  			    
  
	ADC_SoftwareStartConvCmd(ADC1, ENABLE);		//使能指定的ADC1的软件转换启动功能	
	 
	while(!ADC_GetFlagStatus(ADC1, ADC_FLAG_EOC ));//等待转换结束

	return ADC_GetConversionValue(ADC1);	//返回最近一次ADC1规则组的转换结果
}



/**************************************************************************
函数功能：获得ADC2值
入口参数：ch 通道值 0~3
返回  值：返回最近一次ADC2规则组的转换结果
**************************************************************************/

u16  Get_adc2(u8 ch)
{   
			//设置指定ADC的规则组通道，一个序列，采样时间
	ADC_RegularChannelConfig(ADC2, ch, 1, ADC_SampleTime_239Cycles5 );	//ADC1,ADC通道,采样时间为239.5周期	  			    
  
	ADC_SoftwareStartConvCmd(ADC2, ENABLE);		//使能指定的ADC1的软件转换启动功能	
	 
	while(!ADC_GetFlagStatus(ADC2, ADC_FLAG_EOC ));//等待转换结束

	return ADC_GetConversionValue(ADC2);	//返回最近一次ADC1规则组的转换结果
}


/**************************************************************************
函数功能：获取adc的周期数据
入口参数：ch 通道值 0~3
返回  值：times
**************************************************************************/

u16 Get_adc1_Average(u8 ch,u8 times)
{ 		    		  			    
	u32 temp_val=0;
	u8 t;
	for(t=0;t<times;t++)
	{
		temp_val+=Get_adc1(ch);
		delay_ms(5);
	}
	return temp_val/times;
	
}



/**************************************************************************
函数功能：获取adc2的周期数据
入口参数：ch 通道值 0~3
返回  值：times
**************************************************************************/

u16 Get_adc2_Average(u8 ch,u8 times)
{ 		    		  			    
	u32 temp_val=0;
	u8 t;
	for(t=0;t<times;t++)
	{
		temp_val+=Get_adc2(ch);
		delay_ms(5);
	}
	return temp_val/times;


}
